force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <description>Auto Generated Name: {DEAL ID}-{DATE}-{POOL DIFFERENTIATOR} Example 1234-2020-11-1-A</description>
    <label>Allocation</label>
    <nameField>
        <label>Allocation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>