force-app/main/default/objects/Allocation__c/fields/Allocation_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Unique_Identifier__c</fullName>
    <description>This is a unique identifier for the Allocation of Room types.</description>
    <externalId>true</externalId>
    <label>Allocation Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>