force-app/main/default/objects/Allocation__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <inlineHelpText>Which option/suboption is this allocation for? Include a list of targeted options/suboption titles for this date allocation...</inlineHelpText>
    <label>Comment</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>