force-app/main/default/objects/Allocation__c/fields/Cruise_Solo_Check__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Solo_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this as TRUE if solo traveller &amp; allocation needs to be increased by 1 for cabin/room</inlineHelpText>
    <label>Solo Check</label>
    <type>Checkbox</type>
</CustomField>