force-app/main/default/objects/Allocation__c/fields/deal__c.field-meta.xml
<CustomField>
    <fullName>deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Allocation</relationshipLabel>
    <relationshipName>Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>