force-app/main/default/objects/Allocation__c/fields/departure_date__c.field-meta.xml
<CustomField>
    <fullName>departure_date__c</fullName>
    <label>Main Tour Departure Date</label>
    <type>Date</type>
</CustomField>