force-app/main/default/objects/Allocation__c/fields/Held__c.field-meta.xml
<CustomField>
    <fullName>Held__c</fullName>
    <label>Held</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>