force-app/main/default/objects/Allocation__c/fields/Min_Number_Manager__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min Number Manager</label>
    <referenceTo>Min_Number_Manager__c</referenceTo>
    <relationshipLabel>Allocation</relationshipLabel>
    <relationshipName>Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>