force-app/main/default/objects/Allocation__c/fields/Min_sold_to_ticket__c.field-meta.xml
<CustomField>
    <fullName>Min_sold_to_ticket__c</fullName>
    <label>Min sold to ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>