force-app/main/default/objects/Allocation__c/fields/ON_Held__c.field-meta.xml
<CustomField>
    <fullName>ON_Held__c</fullName>
    <label>Total Hold (ON)</label>
    <summarizedField>Order_Night_POE__c.order_quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Night_POE__c.status__c</field>
        <operation>equals</operation>
        <value>Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Night_POE__c.Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>