force-app/main/default/objects/Allocation__c/fields/Order_Night_Sold__c.field-meta.xml
<CustomField>
    <fullName>Order_Night_Sold__c</fullName>
    <label>Order Night Sold</label>
    <summarizedField>Order_Night_POE__c.order_quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Night_POE__c.status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Night_POE__c.Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>