force-app/main/default/objects/Allocation__c/fields/Order_Nights_Sold_Held__c.field-meta.xml
<CustomField>
    <fullName>Order_Nights_Sold_Held__c</fullName>
    <label>Order Nights Sold Held</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>