force-app/main/default/objects/Allocation__c/fields/Override_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Override_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Allocation</label>
    <type>Checkbox</type>
</CustomField>