force-app/main/default/objects/Allocation__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>/*IF ( Cruise_Solo_Check__c ,
Total_Allocation__c - ( ON_Held__c + ON_Sold__c + ON_Solo_Cruise__c + Sold__c +  Held__c + Solo_Balance__c + Order_Nights_Sold_Held__c ),
Total_Allocation__c - ( ON_Held__c + ON_Sold__c + Sold__c +  Held__c  + Order_Nights_Sold_Held__c )
)*/

IF ( Cruise_Solo_Check__c ,
Total_Allocation__c - ( ON_Held__c + ON_Sold__c + ON_Solo_Cruise__c ),
Total_Allocation__c - ( ON_Held__c + ON_Sold__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>