force-app/main/default/objects/Allocation__c/fields/SiteMinder_Response_Allocation__c.field-meta.xml
<CustomField>
    <fullName>SiteMinder_Response_Allocation__c</fullName>
    <label>SiteMinder Response Allocation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>