force-app/main/default/objects/Allocation__c/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <label>Sold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>