force-app/main/default/objects/Allocation__c/fields/Solo_Balance__c.field-meta.xml
<CustomField>
    <fullName>Solo_Balance__c</fullName>
    <label>Solo Balance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>