force-app/main/default/objects/Allocation__c/fields/suffix__c.field-meta.xml
<CustomField>
    <fullName>suffix__c</fullName>
    <defaultValue>&quot;A&quot;</defaultValue>
    <label>Pool Differentiator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>