force-app/main/default/objects/Allocation__c/fields/Total_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation__c</fullName>
    <label>Total Allocation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>