force-app/main/default/objects/Allocation__c/fields/Total_Allocation_In_Progress_ON__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_In_Progress_ON__c</fullName>
    <formula>IF( Cruise_Solo_Check__c==true, (ON_In_Progress__c + Total_Solo_In_Progress_ON__c) , ON_In_Progress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Allocation In Progress(ON)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>